--- a/13디자인연습/css/login.css
+++ b/13디자인연습/css/login.css
@@ -1,4 +1,13 @@
-.form-login {
-    float: none;
-    margin: 0 auto;
+.login-form {
+    box-shadow: 0px 8px 16px rgb(0,0,0, 0.15);
+    padding: 30px;
+}
+.login-form img {
+    width: 100%; /* max width: 최소너비 */
+}
+.login-form .btn-kakao {
+    background-color: yellow;
+}
+.login-form-inner{
+    padding: 30px 20px;
 }
